Colaboratory を使用して作成しました

--- a/【砂川快斗】Pandas_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Pandas_提出課題_editor_ipynb_のコピー.ipynb
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1YEHA6BGIEc9"
       },
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "B8oNY8imLeJ-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         },
         "outputId": "564a2744-57a1-4431-f2fe-b4f9afda4636"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
       "metadata": {
         "id": "nUOMKGtRONdd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +379,7 @@
         },
         "outputId": "bc20bbb7-e4b6-4588-e55d-458b537ceb9b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
         },
         "outputId": "86440b18-3478-47dd-f0e2-af9b89b1c9e9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +802,7 @@
         },
         "outputId": "d958b42e-2b62-4f03-870b-d7b500439524"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1045,7 +1045,7 @@
         },
         "outputId": "1abec989-9387-4b7f-8443-a6fc1b927e24"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1286,7 +1286,7 @@
         },
         "outputId": "3059f365-72e2-415b-a72b-cf7d6591b448"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1336,7 +1336,7 @@
         },
         "outputId": "3cc11488-b7ab-4dd4-cc65-6c634a68631c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1396,7 +1396,7 @@
         },
         "outputId": "1bfdfb3a-b48d-40c1-c3e0-95dec5239db5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,7 +1590,7 @@
         },
         "outputId": "2977a69c-ba36-4d0c-8daa-b8fb271288ad"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1760,35 +1760,28 @@
     {
       "cell_type": "code",
       "source": [
-        "df_concatenated.describe"
+        "df_concatenated.describe()"
       ],
       "metadata": {
         "id": "pNZHGKV5b1x_",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 172
         },
-        "outputId": "267084b6-8e1d-4091-a1b1-50f3a4bda233"
+        "outputId": "c537b3dd-2092-4ff5-832e-1e3943af17da"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method NDFrame.describe of     名前    職業  年齢   身長    体重\n",
-              "0   もも    社長  30  158  48.0\n",
-              "1  はると   社会人  25  172  65.0\n",
-              "2   まい   社会人  23  163  51.0\n",
-              "3   そら   NaN  20  173  61.0\n",
-              "4  あきら   大学生  20  169  63.0\n",
-              "5  おさむ  専門学生  19  175  68.0\n",
-              "6  あやか    学生  19  165   NaN\n",
-              "7  たかし    学生  17  170  60.0\n",
-              "8   かな    学生  15  150  43.0>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-62d2d54610c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_concatenated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_concatenated' is not defined"
+          ]
         }
       ]
     },
@@ -1825,7 +1818,7 @@
       "metadata": {
         "id": "QgVB6bpAPEJW"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1842,7 +1835,7 @@
         },
         "outputId": "d9825fff-5320-4cdf-cef3-d5979a179eab"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2043,7 +2036,7 @@
         },
         "outputId": "a0dce0cf-ff00-40cb-89f9-583b977c1b51"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2296,7 +2289,7 @@
         },
         "outputId": "1edebb15-cf79-43fe-fd46-ca81a2f64b64"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2519,7 +2512,7 @@
         },
         "outputId": "e50cffdb-e494-4373-e416-0978d9fc6084"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2761,7 +2754,7 @@
         },
         "outputId": "6deba0ad-8af3-4e3f-8f86-cda128c65272"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2956,7 +2949,7 @@
         },
         "outputId": "09559c16-72d7-4e46-fbcf-cec724596b58"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
